# Musubi

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh
lib/core/: CMakeLists.txt
ui/: CMakeLists.txt
ui/qml/: CMakeLists.txt
ui/src/: CMakeLists.txt  main.cpp
